--- a/package.json
+++ b/package.json
@@ -14,13 +14,16 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.3",
     "framer-motion": "^11.3.30",
+    "lucide-react": "^0.436.0",
     "next": "^14.2.6",
+    "r": "^0.0.5",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.1",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.9.0",
     "sonner": "^1.5.0",
     "swr": "^2.2.5",
     "web-vitals": "^2.1.4"
